now differentiates between visible, hidden, and disabled courses/courseitems correctly... if the checks for this are correctly chosen... also: started requirement column, now displaying only: either nothing or v

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ hr
 {
     float: right;
 }
+.col3
+{
+    float: right;
+}
 .ghost, .greyedout
 {
     opacity: 0.3;
